# anurag.sh

./: Cargo.toml  Dockerfile  README.md  application.yaml  merge-all.sh  nuxt.config.js  package.json  pnpm-lock.yaml  tsconfig.json
.github/: dependabot.yml
.github/workflows/: build-deploy.yml  ci.yml  cleanup-old-images.yml  deploy.yml  pr-build.yaml
api/: og.tsx
assets/: style.scss
content/blog/: index.md
content/projects/: index.md
kubernetes/: client.policy.yaml  deployment.yaml  gateway.yaml  httproute.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  securitypolicy.yaml
pages/: _slug.vue  index.vue
pages/blog/: _slug.vue
pages/projects/: _slug.vue
public/: 404.html  index.html
src/: App.tsx  app.css  app.html  index.tsx  main.rs
src/components/: ComingSoon.tsx  NotFound.tsx
src/fonts/: fonts.css
src/pages/: Blog.tsx  Home.tsx  Projects.tsx
src/routes/: +layout.svelte  +page.svelte
static/css/: sakura-dark.css  sakura.css
static/js/: switch-theme.js
templates/: index.html
