[package]
name = "anurag-sh"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = "0.8.4"
tokio = { version = "1.45.1", features = [
    "macros",
    "rt-multi-thread",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.98"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
itertools = "0.14.0"
axum-extra = { version = "0.10.1", features = ["cookie"] }
tunnelbana-etags = "0.2.0"
tower = "0.5.2"
